# MIScan

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/straighten/: MainActivity.kt
android/app/src/main/kotlin/com/miscan/android/: MainActivity.kt
android/app/src/main/kotlin/com/miscan/miscan/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bitmap.dart  book_frame.dart  book_transform_page.dart  corner_showcase.dart  cubic_spline.dart  edit_page.dart  file_export.dart  first_launch_page.dart  frame.dart  gallery_export.dart  glider.dart  helpers.dart  image_page.dart  jpeg_encode.dart  jpg_encode.dart  jpg_process.dart  listview_image.dart  loading_page.dart  locations.dart  main.dart  my_home_page.dart  polynomial.dart  post_transform_page.dart  quad_transform.dart  transform.dart  transform_page.dart
lib/l10n/: app_en.arb  app_hr.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_hr.dart
linux/: CMakeLists.txt  my_application.cc
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/basic_linear/: helpers.cpp  helpers.h  line.cpp  line.h  plane.cpp  plane.h  vector.cpp  vector.h
native/image_processing/: image_processing.cpp  image_processing.h
native/jpg_encode/: jpg_encode.cpp  jpg_encode.h
native/straighten/: exports.cpp  exports.h  straighten.cpp  straighten.h
native/transform/: bitmap.cpp  bitmap.h  book_transform.cpp  book_transform.h  parallel_for.cpp  parallel_for.h  quad_transform.cpp  quad_transform.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
